--- a/index.css
+++ b/index.css
@@ -17,8 +17,7 @@ body{
     flex-direction: column;
     width: 75%;
     height:auto;
-margin-left: 150px;
-margin-top: 50px;
+    margin:auto;
 }
 
 .grupo{
